Feature/1.1 - Added logic so that customers can register onto the system